# pydaffodil

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  FUNDING.yml  GUIDELINES.md  LICENSE  MANIFEST.in  README.md  makefile  pyproject.toml  requirements.txt  setup.py  test.py  test_cli.py
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
daffodil/: core.py
example/: .daffodil.yml  inventory.ini  inventory.ini.example  inventory.yml  publish-multi.py  publish-watch.py  publish.py
pydaffodil/: __init__.py  cli.py  core.py
src/pydaffodil/: cli.py
tests/: test_cli.py
