[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydaffodil"
version = "1.2.1"
description = "A cross-platform Python deployment framework for automated remote server deployments via SSH"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mark Wayne Menorca", email = "marcuwynu23@gmail.com" },
]
requires-python = ">=3.9"
keywords = [
    "deployment",
    "ssh",
    "scp",
    "remote",
    "server",
    "automation",
    "devops",
    "ci-cd",
    "deploy",
    "vps",
    "remote-deployment",
    "ssh-deployment",
    "python-deployment",
    "cross-platform",
    "file-transfer",
    "remote-execution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Installation/Setup",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: System :: Archiving :: Packaging",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
    "paramiko>=2.0.0",
    "tqdm>=4.60.0",
    "colorama>=0.4.0",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/marcuwynu23/pydaffodil"
Documentation = "https://github.com/marcuwynu23/pydaffodil#readme"
Repository = "https://github.com/marcuwynu23/pydaffodil"
Issues = "https://github.com/marcuwynu23/pydaffodil/issues"

[project.scripts]
pydaffodil = "pydaffodil.cli:main"

[dependency-groups]
dev = [
    "build>=1.0",
    "twine>=6.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydaffodil"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
]
